[Fix bug][SP] fix bug text link wrong position in iphone 7 (ticket 79732)

--- a/store/css/store-detail/style.css
+++ b/store/css/store-detail/style.css
@@ -60,8 +60,9 @@
   margin-bottom: 24px;
   margin-top: 16px;
   max-width: calc(var(--max-width-PC) + 2 * var(--padding-inline));
-  margin-inline: auto;
-  padding-inline: var(--padding-inline-SP);
+  margin:0 auto;
+  padding-left: var(--padding-inline-SP);
+  padding-right: var(--padding-inline-SP);
 }
 
 .store-detail__content--row {
